--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0008.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0008.html
@@ -1,111 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0008.png">
-      <!--<div class="ocr_carea" title="bbox 2096 0 2272 36">-->
-      <!--<p>-->
-      <span class="ocr_line" title="bbox 2112 0 2258 32">
-        <span id="w_0" class="ocr_word" title="bbox 2112 0 2258 32">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">/J^JW</ins>
-          </span>
-        </span>
-      </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 338 272 2230 1714">-->
-      <!--<p>-->
+      <span class="ocr_line" title="bbox 2112 0 2258 32"/>
       <span class="ocr_line" title="bbox 716 294 1776 378">
         <span id="w_1" class="ocr_word" title="bbox 716 298 776 378">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C</ins>
-            <del title="nlp 0.90">C</del>
-          </span>
-        </span>
-        <span id="w_2" class="ocr_word" title="bbox 804 302 872 376">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">O</ins>
-            <del title="nlp 0.90">O</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 900 298 988 376">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_4" class="ocr_word" title="bbox 1018 298 1106 376">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 1132 296 1202 374">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_6" class="ocr_word" title="bbox 1230 296 1306 374">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">N</ins>
-            <del title="nlp 0.90">N</del>
-          </span>
-        </span>
-        <span id="w_7" class="ocr_word" title="bbox 1334 296 1398 372">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_8" class="ocr_word" title="bbox 1424 298 1500 372">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 1528 294 1606 370">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">R</ins>
-            <del title="nlp 0.90">R</del>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1632 294 1672 370">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1700 296 1776 370" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">λ-</ins>
+            <ins title="nlp 2.00">COMMENTARIA</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 354 496 2138 604">
-        <span id="w_12" class="ocr_word" title="bbox 354 510 548 604" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">·-γ</ins>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 674 496 2138 600">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ARISTOTELEM</ins>
-            <del title="nlp 0.90">ARISTOTELEM</del>
+            <ins title="nlp 2.00">IN ARISTOTELEM</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 936 730 1542 812">
         <span id="w_14" class="ocr_word" title="bbox 936 730 1542 812">
           <span class="alternatives">
@@ -114,8 +32,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 828 1453 2213 1520">
         <span id="w_15" class="ocr_word" title="bbox 828 1472 965 1505">
           <span class="alternatives">
@@ -141,39 +57,11 @@
             <del title="nlp 0.90">AUCTORITATE</del>
           </span>
         </span>
-        <span id="w_19" class="ocr_word" title="bbox 1839 1461 1995 1512">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">OOu^^</ins>
-          </span>
-        </span>
-        <span id="w_20" class="ocr_word" title="bbox 2012 1491 2019 1499">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 2058 1461 2072 1511">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">/</ins>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 2094 1478 2137 1489">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">"</ins>
-          </span>
-        </span>
-        <span id="w_23" class="ocr_word" title="bbox 2172 1453 2213 1520">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">3</ins>
-          </span>
-        </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 584 1664 1885 1709">
-        <span id="w_24" class="ocr_word" title="bbox 584 1668 906 1709" xml:lang="grc">
+        <span id="w_24" class="ocr_word" title="bbox 584 1668 906 1709" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">-λι’-λ1)Γ̀ι1IλλΙ.)̀</ins>
+            <ins title="nlp 2.00">ACADEMIAE</ins>
           </span>
         </span>
         <span id="w_25" class="ocr_word" title="bbox 938 1666 1290 1708">
@@ -195,10 +83,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 324 2312 2140 2508">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 940 2324 1515 2375">
         <span id="w_28" class="ocr_word" title="bbox 940 2325 1300 2375">
           <span class="alternatives">
@@ -213,8 +97,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 339 2460 2124 2503">
         <span id="w_30" class="ocr_word" title="bbox 339 2465 464 2502">
           <span class="alternatives">
@@ -271,10 +153,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 740 3004 1710 3242">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 1071 3013 1378 3063">
         <span id="w_39" class="ocr_word" title="bbox 1071 3013 1378 3063">
           <span class="alternatives">
@@ -283,8 +161,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 756 3117 1694 3154">
         <span id="w_40" class="ocr_word" title="bbox 756 3119 895 3154">
           <span class="alternatives">
@@ -325,8 +201,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
