--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0009.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0009.html
@@ -1,65 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0009.png">
-      <!--<div class="ocr_carea" title="bbox 162 108 2006 984">-->
-      <!--<p>-->
-      <span class="ocr_line" title="bbox 766 120 928 202">
-        <span id="w_0" class="ocr_word" title="bbox 766 120 872 202">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">■^1</ins>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 924 174 928 184">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
-      </span>
-      <!--</p>-->
-      <!--<p>-->
+      <span class="ocr_line" title="bbox 766 120 928 202"/>
       <span class="ocr_line" title="bbox 762 346 1394 440">
         <span id="w_2" class="ocr_word" title="bbox 762 348 842 440">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_3" class="ocr_word" title="bbox 906 348 984 440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">L</ins>
-            <del title="nlp 0.90">L</del>
-          </span>
-        </span>
-        <span id="w_4" class="ocr_word" title="bbox 1044 348 1092 440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
-          </span>
-        </span>
-        <span id="w_5" class="ocr_word" title="bbox 1154 346 1252 440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_6" class="ocr_word" title="bbox 1312 348 1394 440">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
+            <ins title="nlp 2.00">ΕLIAE</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 374 554 1786 634">
         <span id="w_7" class="ocr_word" title="bbox 374 554 498 632">
           <span class="alternatives">
@@ -100,26 +57,14 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 580 914 1580 980">
         <span id="w_13" class="ocr_word" title="bbox 580 914 1220 980">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">COMMENT</ins>
+            <ins class="alt" title="nlp 2.00">COMMENTARIA</ins>
             <del title="nlp 0.90">COMMENT</del>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 1256 916 1580 978">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ARIA</ins>
-            <del title="nlp 0.90">ARIA</del>
-          </span>
-        </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 746 1518 1424 1564">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 762 1525 1408 1559">
         <span id="w_15" class="ocr_word" title="bbox 762 1525 968 1558">
           <span class="alternatives">
@@ -140,10 +85,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 420 1700 1754 1758">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 434 1709 1737 1753">
         <span id="w_18" class="ocr_word" title="bbox 434 1709 754 1750">
           <span class="alternatives">
@@ -170,10 +111,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 806 2514 1370 2578">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 820 2526 1354 2574">
         <span id="w_22" class="ocr_word" title="bbox 820 2526 1122 2574">
           <span class="alternatives">
@@ -188,10 +125,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 602 3068 1574 3304">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 933 3078 1240 3127">
         <span id="w_24" class="ocr_word" title="bbox 933 3078 1240 3127">
           <span class="alternatives">
@@ -200,8 +133,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 617 3179 1557 3218">
         <span id="w_25" class="ocr_word" title="bbox 617 3180 758 3217">
           <span class="alternatives">
@@ -237,13 +168,10 @@
       <span class="ocr_line" title="bbox 1036 3266 1130 3299">
         <span id="w_30" class="ocr_word" title="bbox 1036 3266 1130 3299">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">MOM</ins>
-            <del title="nlp 0.90">MOM</del>
+            <ins title="nlp 2.00">MCM</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
