--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0013.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0013.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0013.png">
-      <!--<div class="ocr_carea" title="bbox 124 124 2016 3292">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 963 142 1999 184">
         <span id="w_0" class="ocr_word" title="bbox 963 142 1229 177">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 183 255 1997 318">
         <span id="w_2" class="ocr_word" title="bbox 183 255 362 298">
           <span class="alternatives">
@@ -361,17 +357,17 @@
             <del title="nlp 0.90">debebat</del>
           </span>
         </span>
-        <span id="w_56" class="ocr_word" title="bbox 807 674 883 698" xml:lang="grc">
+        <span id="w_56" class="ocr_word" title="bbox 807 674 883 698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
-        <span id="w_57" class="ocr_word" title="bbox 906 664 1037 714" xml:lang="grc">
+        <span id="w_57" class="ocr_word" title="bbox 906 664 1037 714" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωνῆς</ins>
           </span>
         </span>
-        <span id="w_58" class="ocr_word" title="bbox 1060 661 1170 716" xml:lang="grc">
+        <span id="w_58" class="ocr_word" title="bbox 1060 661 1170 716" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡλίου</ins>
           </span>
@@ -432,61 +428,59 @@
             <del title="nlp 0.90">est</del>
           </span>
         </span>
-        <span id="w_68" class="ocr_word" title="bbox 1387 744 1652 797" xml:lang="grc">
+        <span id="w_68" class="ocr_word" title="bbox 1387 744 1652 797" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">προλεγόμενα</ins>
           </span>
         </span>
-        <span id="w_69" class="ocr_word" title="bbox 1692 758 1759 785" xml:lang="grc">
+        <span id="w_69" class="ocr_word" title="bbox 1692 758 1759 785" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σὺν</ins>
           </span>
         </span>
-        <span id="w_70" class="ocr_word" title="bbox 1804 744 1887 785" xml:lang="grc">
+        <span id="w_70" class="ocr_word" title="bbox 1804 744 1887 785" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεῶ</ins>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 1923 760 1992 799" xml:lang="grc">
+        <span id="w_71" class="ocr_word" title="bbox 1923 760 1992 799" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 173 819 1314 876">
-        <span id="w_72" class="ocr_word" title="bbox 173 829 383 868" xml:lang="grc">
+        <span id="w_72" class="ocr_word" title="bbox 173 829 383 868" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πορφυρίου</ins>
           </span>
         </span>
-        <span id="w_73" class="ocr_word" title="bbox 414 819 633 871" xml:lang="grc">
+        <span id="w_73" class="ocr_word" title="bbox 414 819 633 871" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰσαγωγῆς</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 665 833 740 857" xml:lang="grc">
+        <span id="w_74" class="ocr_word" title="bbox 665 833 740 857" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
-        <span id="w_75" class="ocr_word" title="bbox 773 833 908 871" xml:lang="grc">
+        <span id="w_75" class="ocr_word" title="bbox 773 833 908 871" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωνῆς</ins>
           </span>
         </span>
-        <span id="w_76" class="ocr_word" title="bbox 939 821 1050 874" xml:lang="grc">
+        <span id="w_76" class="ocr_word" title="bbox 939 821 1050 874" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡλίου</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 1083 823 1314 876" xml:lang="grc">
+        <span id="w_77" class="ocr_word" title="bbox 1083 823 1314 876" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσόφου.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 287 895 1990 957">
         <span id="w_78" class="ocr_word" title="bbox 287 895 437 948">
           <span class="alternatives">
@@ -969,61 +963,61 @@
             <del title="nlp 0.90">perrexit</del>
           </span>
         </span>
-        <span id="w_156" class="ocr_word" title="bbox 1162 1461 1239 1515" xml:lang="grc">
+        <span id="w_156" class="ocr_word" title="bbox 1162 1461 1239 1515" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐγὼ</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1284 1463 1325 1503" xml:lang="grc">
+        <span id="w_157" class="ocr_word" title="bbox 1284 1463 1325 1503" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1370 1463 1550 1504" xml:lang="grc">
+        <span id="w_158" class="ocr_word" title="bbox 1370 1463 1550 1504" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τἀναντία</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 1589 1480 1724 1504" xml:lang="grc">
+        <span id="w_159" class="ocr_word" title="bbox 1589 1480 1724 1504" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκείνῳ</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 1767 1467 1866 1521" xml:lang="grc">
+        <span id="w_160" class="ocr_word" title="bbox 1767 1467 1866 1521" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φημὶ</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 1904 1465 1979 1522" xml:lang="grc">
+        <span id="w_161" class="ocr_word" title="bbox 1904 1465 1979 1522" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔπη</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 164 1540 1980 1599">
-        <span id="w_162" class="ocr_word" title="bbox 164 1549 301 1578" xml:lang="grc">
+        <span id="w_162" class="ocr_word" title="bbox 164 1549 301 1578" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὕτως·</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 335 1552 368 1575" xml:lang="grc">
+        <span id="w_163" class="ocr_word" title="bbox 335 1552 368 1575" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰ</ins>
           </span>
         </span>
-        <span id="w_164" class="ocr_word" title="bbox 401 1553 453 1590" xml:lang="grc">
+        <span id="w_164" class="ocr_word" title="bbox 401 1553 453 1590" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_165" class="ocr_word" title="bbox 486 1553 644 1592" xml:lang="grc">
+        <span id="w_165" class="ocr_word" title="bbox 486 1553 644 1592" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γράμμα</ins>
           </span>
         </span>
-        <span id="w_166" class="ocr_word" title="bbox 667 1540 763 1590" xml:lang="grc">
+        <span id="w_166" class="ocr_word" title="bbox 667 1540 763 1590" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">κ-).,</ins>
+            <ins title="nlp 2.00">κτλ.,</ins>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 797 1552 902 1593">
@@ -1064,7 +1058,7 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1594 1544 1670 1586">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">13’’</ins>
+            <ins title="nlp 2.00">13b</ins>
           </span>
         </span>
         <span id="w_174" class="ocr_word" title="bbox 1683 1545 1756 1599">
@@ -1402,7 +1396,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 480 2025 755 2072">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">praecei)tore</ins>
+            <ins title="nlp 2.00">praeceptore</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 786 2020 829 2060">
@@ -1423,22 +1417,19 @@
             <del title="nlp 0.90">aduotatiouem</del>
           </span>
         </span>
-        <span id="w_232" class="ocr_word" title="bbox 1422 2041 1476 2069" xml:lang="grc">
+        <span id="w_232" class="ocr_word" title="bbox 1422 2041 1476 2069" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὥς</ins>
           </span>
         </span>
-        <span id="w_233" class="ocr_word" title="bbox 1506 2040 1619 2080" xml:lang="grc">
+        <span id="w_233" class="ocr_word" title="bbox 1506 2040 1619 2080" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_234" class="ocr_word" title="bbox 1648 2026 1655 2040" xml:lang="grc">
+        <span id="w_234" class="ocr_word" title="bbox 1648 2026 1655 2040" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">’Oλυμπιόδωρος</ins>
-            <del title="nlp 0.90">Ὀλυμπιόδωρος</del>
-            <del title="nlp 0.89">Ὀλυμπιόδωρός</del>
-            <del title="nlp 0.88">Ὀλυμπιόδωρον</del>
+            <ins title="nlp 2.00">’Oλυμπιόδωρος</ins>
           </span>
         </span>
       </span>
@@ -1627,34 +1618,34 @@
             <del title="nlp 0.90">velut</del>
           </span>
         </span>
-        <span id="w_265" class="ocr_word" title="bbox 1673 2268 1732 2307" xml:lang="grc">
+        <span id="w_265" class="ocr_word" title="bbox 1673 2268 1732 2307" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δεῖ</ins>
           </span>
         </span>
-        <span id="w_266" class="ocr_word" title="bbox 1751 2268 1792 2307" xml:lang="grc">
+        <span id="w_266" class="ocr_word" title="bbox 1751 2268 1792 2307" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_267" class="ocr_word" title="bbox 1813 2268 1967 2318" xml:lang="grc">
+        <span id="w_267" class="ocr_word" title="bbox 1813 2268 1967 2318" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰδέναι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 153 2331 1966 2401">
-        <span id="w_268" class="ocr_word" title="bbox 153 2331 214 2385" xml:lang="grc">
+        <span id="w_268" class="ocr_word" title="bbox 153 2331 214 2385" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐφ’</ins>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 252 2349 308 2378" xml:lang="grc">
+        <span id="w_269" class="ocr_word" title="bbox 252 2349 308 2378" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἷς</ins>
           </span>
         </span>
-        <span id="w_270" class="ocr_word" title="bbox 340 2337 591 2391" xml:lang="grc">
+        <span id="w_270" class="ocr_word" title="bbox 340 2337 591 2391" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παραβάλλει,</ins>
           </span>
@@ -1689,31 +1680,23 @@
             <del title="nlp 0.90">velut</del>
           </span>
         </span>
-        <span id="w_276" class="ocr_word" title="bbox 1646 2362 1760 2400" xml:lang="grc">
+        <span id="w_276" class="ocr_word" title="bbox 1646 2362 1760 2400" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡμεῖς</ins>
           </span>
         </span>
-        <span id="w_277" class="ocr_word" title="bbox 1782 2348 1822 2387" xml:lang="grc">
+        <span id="w_277" class="ocr_word" title="bbox 1782 2348 1822 2387" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_278" class="ocr_word" title="bbox 1853 2362 1966 2401" xml:lang="grc">
+        <span id="w_278" class="ocr_word" title="bbox 1853 2362 1966 2401" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">προσ-</ins>
+            <ins title="nlp 2.00">προσεθήκαμεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 151 2411 1963 2481">
-        <span id="w_279" class="ocr_word" title="bbox 151 2411 346 2466" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">εθήκμεν</ins>
-            <del title="nlp 0.90">προσεθήκαμεν</del>
-            <del title="nlp 0.89">προσεθήκαμέν</del>
-            <del title="nlp 0.88">προστεθήκαμεν</del>
-          </span>
-        </span>
         <span id="w_280" class="ocr_word" title="bbox 379 2415 437 2469">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(p.</ins>
@@ -1940,8 +1923,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 260 2731 1960 2795">
         <span id="w_317" class="ocr_word" title="bbox 260 2731 433 2774">
           <span class="alternatives">
@@ -2239,25 +2220,23 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 143 3172 1952 3235">
-        <span id="w_365" class="ocr_word" title="bbox 143 3172 206 3206" xml:lang="grc">
+        <span id="w_365" class="ocr_word" title="bbox 143 3172 206 3206" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
-        <span id="w_366" class="ocr_word" title="bbox 232 3187 347 3221" xml:lang="grc">
+        <span id="w_366" class="ocr_word" title="bbox 232 3187 347 3221" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωνῆς</ins>
           </span>
         </span>
-        <span id="w_367" class="ocr_word" title="bbox 373 3177 468 3222" xml:lang="grc">
+        <span id="w_367" class="ocr_word" title="bbox 373 3177 468 3222" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡλιοῦ</ins>
           </span>
         </span>
-        <span id="w_368" class="ocr_word" title="bbox 494 3179 689 3225" xml:lang="grc">
+        <span id="w_368" class="ocr_word" title="bbox 494 3179 689 3225" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσόφου,</ins>
           </span>
@@ -2292,17 +2271,17 @@
             <del title="nlp 0.90">commentario</del>
           </span>
         </span>
-        <span id="w_374" class="ocr_word" title="bbox 1596 3189 1774 3235" xml:lang="grc">
+        <span id="w_374" class="ocr_word" title="bbox 1596 3189 1774 3235" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μέλλοντος</ins>
           </span>
         </span>
-        <span id="w_375" class="ocr_word" title="bbox 1800 3202 1857 3225" xml:lang="grc">
+        <span id="w_375" class="ocr_word" title="bbox 1800 3202 1857 3225" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σὺν</ins>
           </span>
         </span>
-        <span id="w_376" class="ocr_word" title="bbox 1883 3190 1952 3228" xml:lang="grc">
+        <span id="w_376" class="ocr_word" title="bbox 1883 3190 1952 3228" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεῶ</ins>
           </span>
@@ -2311,7 +2290,7 @@
       <span class="ocr_line" title="bbox 143 3231 964 3286">
         <span id="w_377" class="ocr_word" title="bbox 143 3231 300 3277">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">a’p;aa8ai</ins>
+            <ins title="nlp 2.00">ἄρξασθαι</ins>
           </span>
         </span>
         <span id="w_378" class="ocr_word" title="bbox 324 3235 400 3278">
@@ -2320,24 +2299,22 @@
             <del title="nlp 0.90">(sic</del>
           </span>
         </span>
-        <span id="w_379" class="ocr_word" title="bbox 426 3239 484 3270" xml:lang="grc">
+        <span id="w_379" class="ocr_word" title="bbox 426 3239 484 3270" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_380" class="ocr_word" title="bbox 511 3238 674 3284" xml:lang="grc">
+        <span id="w_380" class="ocr_word" title="bbox 511 3238 674 3284" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">παρόντος</ins>
           </span>
         </span>
-        <span id="w_381" class="ocr_word" title="bbox 699 3250 964 3286" xml:lang="grc">
+        <span id="w_381" class="ocr_word" title="bbox 699 3250 964 3286" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συγγράμματος.</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
