--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0016.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0016.html
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0016.png">
-      <!--<div class="ocr_carea" title="bbox 182 94 2168 3242">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 330 101 1367 141">
-        <span id="w_0" class="ocr_word" title="bbox 330 117 353 141" xml:lang="grc">
+        <span id="w_0" class="ocr_word" title="bbox 330 117 353 141" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.95">κ</ins>
           </span>
@@ -24,12 +22,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 331 216 2149 275">
         <span id="w_2" class="ocr_word" title="bbox 331 221 506 275">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">veli([uis</ins>
+            <ins title="nlp 2.00">reliquis</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 544 222 660 274">
@@ -58,7 +54,7 @@
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1253 217 1479 259">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">libidino.se</ins>
+            <ins title="nlp 2.00">libidinose</ins>
           </span>
         </span>
         <span id="w_8" class="ocr_word" title="bbox 1519 217 1680 258">
@@ -172,109 +168,109 @@
             <ins class="alt" title="nlp 1.00">66,4)</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 829 380 891 420" xml:lang="grc">
+        <span id="w_26" class="ocr_word" title="bbox 829 380 891 420" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 922 381 1084 432" xml:lang="grc">
+        <span id="w_27" class="ocr_word" title="bbox 922 381 1084 432" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγομεν</ins>
           </span>
         </span>
-        <span id="w_28" class="ocr_word" title="bbox 1117 394 1174 418" xml:lang="grc">
+        <span id="w_28" class="ocr_word" title="bbox 1117 394 1174 418" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_29" class="ocr_word" title="bbox 1205 393 1276 418" xml:lang="grc">
+        <span id="w_29" class="ocr_word" title="bbox 1205 393 1276 418" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 1307 377 1449 418" xml:lang="grc">
+        <span id="w_30" class="ocr_word" title="bbox 1307 377 1449 418" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄτοπον</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 1482 393 1545 417" xml:lang="grc">
+        <span id="w_31" class="ocr_word" title="bbox 1482 393 1545 417" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_32" class="ocr_word" title="bbox 1578 378 1669 418" xml:lang="grc">
+        <span id="w_32" class="ocr_word" title="bbox 1578 378 1669 418" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεὸν</ins>
           </span>
         </span>
-        <span id="w_33" class="ocr_word" title="bbox 1702 391 1817 431" xml:lang="grc">
+        <span id="w_33" class="ocr_word" title="bbox 1702 391 1817 431" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">σῶμα</ins>
           </span>
         </span>
-        <span id="w_34" class="ocr_word" title="bbox 1849 376 1963 416" xml:lang="grc">
+        <span id="w_34" class="ocr_word" title="bbox 1849 376 1963 416" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἶναι·</ins>
           </span>
         </span>
-        <span id="w_35" class="ocr_word" title="bbox 2001 392 2048 415" xml:lang="grc">
+        <span id="w_35" class="ocr_word" title="bbox 2001 392 2048 415" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_36" class="ocr_word" title="bbox 2078 391 2150 429" xml:lang="grc">
+        <span id="w_36" class="ocr_word" title="bbox 2078 391 2150 429" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 457 2151 516">
-        <span id="w_37" class="ocr_word" title="bbox 331 463 487 516" xml:lang="grc">
+        <span id="w_37" class="ocr_word" title="bbox 331 463 487 516" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐράνια</ins>
           </span>
         </span>
-        <span id="w_38" class="ocr_word" title="bbox 519 476 616 501" xml:lang="grc">
+        <span id="w_38" class="ocr_word" title="bbox 519 476 616 501" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 643 459 924 514" xml:lang="grc">
+        <span id="w_39" class="ocr_word" title="bbox 643 459 924 514" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ἀριστοτέλην</ins>
           </span>
         </span>
-        <span id="w_40" class="ocr_word" title="bbox 964 459 1048 499" xml:lang="grc">
+        <span id="w_40" class="ocr_word" title="bbox 964 459 1048 499" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θεοὶ</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 1086 474 1148 498" xml:lang="grc">
+        <span id="w_41" class="ocr_word" title="bbox 1086 474 1148 498" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_42" class="ocr_word" title="bbox 1186 474 1228 498" xml:lang="grc">
+        <span id="w_42" class="ocr_word" title="bbox 1186 474 1228 498" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1267 457 1370 498" xml:lang="grc">
+        <span id="w_43" class="ocr_word" title="bbox 1267 457 1370 498" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">θέειν</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1402 457 1463 497" xml:lang="grc">
+        <span id="w_44" class="ocr_word" title="bbox 1402 457 1463 497" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀεὶ</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 1493 457 1557 497" xml:lang="grc">
+        <span id="w_45" class="ocr_word" title="bbox 1493 457 1557 497" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_46" class="ocr_word" title="bbox 1589 457 1779 498" xml:lang="grc">
+        <span id="w_46" class="ocr_word" title="bbox 1589 457 1779 498" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κινεῖσθαι</ins>
           </span>
@@ -454,35 +450,32 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 329 775 2151 833">
-        <span id="w_75" class="ocr_word" title="bbox 329 797 426 822" xml:lang="grc">
+        <span id="w_75" class="ocr_word" title="bbox 329 797 426 822" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_76" class="ocr_word" title="bbox 458 795 524 824" xml:lang="grc">
+        <span id="w_76" class="ocr_word" title="bbox 458 795 524 824" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰς</ins>
           </span>
         </span>
-        <span id="w_77" class="ocr_word" title="bbox 549 778 759 833" xml:lang="grc">
+        <span id="w_77" class="ocr_word" title="bbox 549 778 759 833" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ι Ελλήνων</ins>
-            <del title="nlp 0.90">Ἑλλήνων</del>
-            <del title="nlp 0.89">Πανελλήνων</del>
-            <del title="nlp 0.88">ἀσελήνων</del>
+            <ins title="nlp 2.00">Ἑλλήνων</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 791 794 891 833" xml:lang="grc">
+        <span id="w_78" class="ocr_word" title="bbox 791 794 891 833" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φημὶ</ins>
           </span>
         </span>
-        <span id="w_79" class="ocr_word" title="bbox 923 782 1076 833" xml:lang="grc">
+        <span id="w_79" class="ocr_word" title="bbox 923 782 1076 833" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ψευδεῖς</ins>
           </span>
         </span>
-        <span id="w_80" class="ocr_word" title="bbox 1108 779 1218 821" xml:lang="grc">
+        <span id="w_80" class="ocr_word" title="bbox 1108 779 1218 821" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δόξας</ins>
           </span>
@@ -504,35 +497,29 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1526 793 1623 818" xml:lang="grc">
+        <span id="w_84" class="ocr_word" title="bbox 1526 793 1623 818" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_85" class="ocr_word" title="bbox 1654 793 1742 818" xml:lang="grc">
+        <span id="w_85" class="ocr_word" title="bbox 1654 793 1742 818" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 1757 776 1764 791" xml:lang="grc">
+        <span id="w_87" class="ocr_word" title="bbox 1777 776 1965 831" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">ι</ins>
+            <ins title="nlp 2.00">Ἑλλήνων</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1777 776 1965 831" xml:lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">Ελλήνων</ins>
-            <del title="nlp 0.90">Ἑλλήνων</del>
-          </span>
-        </span>
-        <span id="w_88" class="ocr_word" title="bbox 1997 781 2151 832" xml:lang="grc">
+        <span id="w_88" class="ocr_word" title="bbox 1997 781 2151 832" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ψευδεῖς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 330 856 2149 914">
-        <span id="w_89" class="ocr_word" title="bbox 330 860 480 914" xml:lang="grc">
+        <span id="w_89" class="ocr_word" title="bbox 330 860 480 914" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μύθους</ins>
           </span>
@@ -1274,8 +1261,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 329 1827 2147 1887">
         <span id="w_210" class="ocr_word" title="bbox 329 1827 456 1880">
           <span class="alternatives">
@@ -1782,9 +1767,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 331 2466 2136 2522">
-        <span id="w_292" class="ocr_word" title="bbox 331 2481 451 2520" xml:lang="grc">
+        <span id="w_292" class="ocr_word" title="bbox 331 2481 451 2520" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">παρὸν—93,6·</ins>
+            <ins title="nlp 2.00">παρὸν—93,6·</ins>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 668 2467 821 2507">
@@ -1793,17 +1778,14 @@
             <del title="nlp 0.90">ixsivcoy</del>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 868 2483 911 2507" xml:lang="grc">
+        <span id="w_294" class="ocr_word" title="bbox 868 2483 911 2507" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_295" class="ocr_word" title="bbox 949 2483 1054 2522" xml:lang="grc">
+        <span id="w_295" class="ocr_word" title="bbox 949 2483 1054 2522" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">προ-,</ins>
-            <del title="nlp 0.90">προῇ,</del>
-            <del title="nlp 0.89">προῶ,</del>
-            <del title="nlp 0.88">πρὸ,</del>
+            <ins title="nlp 2.00">προ-,</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 1101 2480 1211 2521">
@@ -1832,17 +1814,7 @@
         </span>
         <span id="w_300" class="ocr_word" title="bbox 1543 2472 1612 2513">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">91’’</ins>
-          </span>
-        </span>
-        <span id="w_301" class="ocr_word" title="bbox 1620 2497 1673 2501">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_302" class="ocr_word" title="bbox 1682 2472 1756 2514">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">92’</ins>
+            <ins title="nlp 2.00">91r–92v</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1795 2478 1837 2515">
@@ -1859,17 +1831,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 1921 2474 1991 2517">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">95"^</ins>
-          </span>
-        </span>
-        <span id="w_306" class="ocr_word" title="bbox 2000 2501 2053 2504">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_307" class="ocr_word" title="bbox 2062 2474 2136 2515">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">96’</ins>
+            <ins title="nlp 2.00">95r–96v</ins>
           </span>
         </span>
       </span>
@@ -1928,19 +1890,13 @@
             <del title="nlp 0.90">propter</del>
           </span>
         </span>
-        <span id="w_317" class="ocr_word" title="bbox 2064 2556 2147 2598" xml:lang="grc">
+        <span id="w_317" class="ocr_word" title="bbox 2064 2556 2147 2598" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ὢ6,</ins>
+            <ins title="nlp 2.00">discrepantias</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 335 2625 2148 2683">
-        <span id="w_318" class="ocr_word" title="bbox 335 2625 579 2679">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">crepantias</ins>
-            <del title="nlp 0.90">crepantias</del>
-          </span>
-        </span>
         <span id="w_319" class="ocr_word" title="bbox 611 2639 717 2680">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">opus</ins>
@@ -2003,8 +1959,8 @@
       <span class="ocr_line" title="bbox 197 2703 2147 2762">
         <span id="w_329" class="ocr_word" title="bbox 197 2703 303 2746">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C’C’</ins>
-            <del title="nlp 0.90">C’C’</del>
+            <ins class="alt" title="nlp 0.10">’C’</ins>
+            <del title="nlp 0.90">’C’</del>
           </span>
         </span>
         <span id="w_330" class="ocr_word" title="bbox 331 2704 473 2746">
@@ -2015,7 +1971,7 @@
         </span>
         <span id="w_331" class="ocr_word" title="bbox 504 2704 575 2759">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">C%</ins>
+            <ins title="nlp 2.00">Ca,</ins>
           </span>
         </span>
         <span id="w_332" class="ocr_word" title="bbox 618 2704 817 2747">
@@ -2048,7 +2004,7 @@
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1269 2708 1321 2751">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">C^</ins>
+            <ins title="nlp 2.00">Cb</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 1361 2709 1540 2762">
@@ -2133,7 +2089,7 @@
         </span>
         <span id="w_351" class="ocr_word" title="bbox 1584 2791 1635 2832">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">C^</ins>
+            <ins title="nlp 2.00">Ca</ins>
           </span>
         </span>
         <span id="w_352" class="ocr_word" title="bbox 1663 2798 1705 2834">
@@ -2144,7 +2100,7 @@
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1727 2791 1782 2835">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">C^</ins>
+            <ins title="nlp 2.00">Cb</ins>
           </span>
         </span>
         <span id="w_354" class="ocr_word" title="bbox 1814 2794 2147 2846">
@@ -2345,7 +2301,7 @@
         </span>
         <span id="w_386" class="ocr_word" title="bbox 1966 3049 1974 3087">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">;</ins>
+            <ins title="nlp 2.00">;</ins>
           </span>
         </span>
         <span id="w_387" class="ocr_word" title="bbox 2007 3034 2145 3075">
@@ -2466,8 +2422,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
