--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0355.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0355.html
@@ -1,32 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0355.png">
-      <!--<div class="ocr_carea" title="bbox 290 1332 1648 1892">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 756 1348 1174 1412">
         <span id="w_0" class="ocr_word" title="bbox 756 1348 1066 1412">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">DAVID</ins>
-            <del title="nlp 0.90">DAVID</del>
-          </span>
-        </span>
-        <span id="w_1" class="ocr_word" title="bbox 1082 1348 1174 1412">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">IS</ins>
-            <del title="nlp 0.90">IS</del>
+            <ins title="nlp 2.00">DAVIDIS</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 516 1510 1414 1578">
         <span id="w_2" class="ocr_word" title="bbox 516 1510 1414 1578">
           <span class="alternatives">
@@ -35,8 +24,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 304 1668 1632 1740">
         <span id="w_3" class="ocr_word" title="bbox 304 1678 414 1740">
           <span class="alternatives">
@@ -63,89 +50,17 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 618 1832 1324 1886">
         <span id="w_7" class="ocr_word" title="bbox 618 1836 656 1886">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">C</ins>
-            <del title="nlp 0.90">C</del>
-          </span>
-        </span>
-        <span id="w_8" class="ocr_word" title="bbox 676 1836 718 1886">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">0</ins>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 740 1838 788 1884">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 810 1836 858 1884">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 878 1836 916 1884">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">E</ins>
-            <del title="nlp 0.90">E</del>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 936 1834 980 1882">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">N</ins>
-            <del title="nlp 0.90">N</del>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 998 1834 1036 1882">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
-          </span>
-        </span>
-        <span id="w_14" class="ocr_word" title="bbox 1054 1836 1094 1882">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">A</ins>
-            <del title="nlp 0.90">A</del>
-          </span>
-        </span>
-        <span id="w_15" class="ocr_word" title="bbox 1118 1834 1158 1882">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">R</ins>
-            <del title="nlp 0.90">R</del>
-          </span>
-        </span>
-        <span id="w_16" class="ocr_word" title="bbox 1178 1834 1198 1880">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">1</ins>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1216 1832 1258 1880">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
-          </span>
-        </span>
-        <span id="w_18" class="ocr_word" title="bbox 1278 1832 1324 1880">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">M</ins>
-            <del title="nlp 0.90">M</del>
+            <ins title="nlp 2.00">COMMENTARIUM</ins>
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
-      <!--<div class="ocr_carea" title="bbox 130 3278 1210 3326">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 146 3285 1202 3321">
         <span id="w_19" class="ocr_word" title="bbox 146 3292 312 3320">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Comment,</ins>
-            <del title="nlp 0.90">Comment,</del>
+            <ins title="nlp 2.00">Comment.</ins>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 332 3293 363 3320">
@@ -166,9 +81,9 @@
             <del title="nlp 0.90">XVIII</del>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 605 3290 629 3318" xml:lang="grc">
+        <span id="w_23" class="ocr_word" title="bbox 605 3290 629 3318" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.98">Α</ins>
+            <ins title="nlp 2.00">2.</ins>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 666 3291 740 3317">
@@ -208,8 +123,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
