--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0128.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0128.html
@@ -776,12 +776,6 @@
             <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
-        <span id="w_147" class="ocr_word" title="bbox 742 1081 750 1097">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
         <span id="w_148" class="ocr_word" title="bbox 764 1097 847 1126" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πῶς</ins>
@@ -2103,7 +2097,7 @@
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1921 2647 1972 2680" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">16. 18 τρίτον]</ins>
+            <ins title="nlp 2.00">τρίτον]</ins>
           </span>
         </span>
       </span>
