--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0018.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0018.html
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0018.png">
-      <!--<div class="ocr_carea" title="bbox 260 94 2188 3246">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 346 108 1381 158">
         <span id="w_0" class="ocr_word" title="bbox 346 135 396 158">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">x„</ins>
+            <ins title="nlp 2.00">XII</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1118 108 1381 148">
@@ -24,8 +22,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 346 219 2163 288">
         <span id="w_2" class="ocr_word" title="bbox 346 239 549 288">
           <span class="alternatives">
@@ -138,13 +134,11 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 278 381 2162 452">
         <span id="w_20" class="ocr_word" title="bbox 278 398 517 452">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V’saepius</ins>
-            <del title="nlp 0.90">V’saepius</del>
+            <ins class="alt" title="nlp 0.10">’saepius</ins>
+            <del title="nlp 0.90">’saepius</del>
           </span>
         </span>
         <span id="w_21" class="ocr_word" title="bbox 565 394 809 449">
@@ -246,8 +240,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 464 539 2163 609">
         <span id="w_37" class="ocr_word" title="bbox 464 557 678 609">
           <span class="alternatives">
@@ -301,7 +293,7 @@
         </span>
         <span id="w_45" class="ocr_word" title="bbox 438 634 664 687">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">1—39,33)</ins>
+            <ins title="nlp 2.00">1–39,33)</ins>
           </span>
         </span>
         <span id="w_46" class="ocr_word" title="bbox 701 633 741 673">
@@ -340,9 +332,9 @@
             <del title="nlp 0.90">p.</del>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1637 624 1886 675" xml:lang="grc">
+        <span id="w_52" class="ocr_word" title="bbox 1637 624 1886 675" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">389ὴ33,</ins>
+            <ins title="nlp 2.00">389–433,</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1925 620 2044 663">
@@ -357,8 +349,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 294 703 2165 767">
         <span id="w_55" class="ocr_word" title="bbox 294 731 315 757">
           <span class="alternatives">
@@ -578,12 +568,7 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 413 954 575 996">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">6"22—</ins>
-          </span>
-        </span>
-        <span id="w_91" class="ocr_word" title="bbox 579 953 690 996">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">9’’34</ins>
+            <ins title="nlp 2.00">6a22–9b34</ins>
           </span>
         </span>
         <span id="w_92" class="ocr_word" title="bbox 737 954 940 1003">
@@ -681,8 +666,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 466 1181 2167 1243">
         <span id="w_107" class="ocr_word" title="bbox 466 1193 585 1235">
           <span class="alternatives">
@@ -955,27 +938,24 @@
             <del title="nlp 0.90">notis</del>
           </span>
         </span>
-        <span id="w_151" class="ocr_word" title="bbox 1487 1522 1606 1546" xml:lang="grc">
+        <span id="w_151" class="ocr_word" title="bbox 1487 1522 1606 1546" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ταῦτα</ins>
           </span>
         </span>
-        <span id="w_152" class="ocr_word" title="bbox 1638 1503 1722 1559" xml:lang="grc">
+        <span id="w_152" class="ocr_word" title="bbox 1638 1503 1722 1559" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔχει</ins>
           </span>
         </span>
-        <span id="w_153" class="ocr_word" title="bbox 1753 1505 1777 1558" xml:lang="grc">
+        <span id="w_153" class="ocr_word" title="bbox 1753 1505 1777 1558" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_154" class="ocr_word" title="bbox 1813 1517 1990 1545" xml:lang="grc">
+        <span id="w_154" class="ocr_word" title="bbox 1813 1517 1990 1545" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.96">παρσῦσαι</ins>
-            <del title="nlp 0.90">παροῦσαι</del>
-            <del title="nlp 0.89">παραβῦσαι</del>
-            <del title="nlp 0.88">παραλῦσαι</del>
+            <ins title="nlp 2.00">παροῦσα</ins>
           </span>
         </span>
         <span id="w_155" class="ocr_word" title="bbox 2020 1503 2169 1557">
@@ -997,22 +977,22 @@
             <ins class="alt" title="nlp 1.00">108,14),</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 653 1606 691 1631" xml:lang="grc">
+        <span id="w_158" class="ocr_word" title="bbox 653 1606 691 1631" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
-        <span id="w_159" class="ocr_word" title="bbox 723 1606 778 1634" xml:lang="grc">
+        <span id="w_159" class="ocr_word" title="bbox 723 1606 778 1634" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἷς</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 809 1605 833 1642" xml:lang="grc">
+        <span id="w_160" class="ocr_word" title="bbox 809 1605 833 1642" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 866 1604 1000 1643" xml:lang="grc">
+        <span id="w_161" class="ocr_word" title="bbox 866 1604 1000 1643" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρᾶξις</ins>
           </span>
@@ -1801,7 +1781,7 @@
         </span>
         <span id="w_289" class="ocr_word" title="bbox 1563 2625 1690 2681">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(H)’),</ins>
+            <ins title="nlp 2.00">(Η)1),</ins>
           </span>
         </span>
         <span id="w_290" class="ocr_word" title="bbox 1708 2626 1962 2669">
@@ -1817,7 +1797,7 @@
         </span>
         <span id="w_292" class="ocr_word" title="bbox 2077 2624 2172 2680">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(K),</ins>
+            <ins title="nlp 2.00">(K),</ins>
           </span>
         </span>
       </span>
@@ -1835,7 +1815,7 @@
         </span>
         <span id="w_295" class="ocr_word" title="bbox 742 2705 827 2760">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">(P).</ins>
+            <ins title="nlp 2.00">(P).</ins>
           </span>
         </span>
         <span id="w_296" class="ocr_word" title="bbox 888 2717 1064 2758">
@@ -1881,8 +1861,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 290 2783 2173 2841">
         <span id="w_303" class="ocr_word" title="bbox 290 2788 321 2828">
           <span class="alternatives">
@@ -2129,12 +2107,10 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 455 3147 2172 3194">
         <span id="w_343" class="ocr_word" title="bbox 455 3150 479 3189">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">^)</ins>
+            <ins title="nlp 2.00">1)</ins>
           </span>
         </span>
         <span id="w_344" class="ocr_word" title="bbox 505 3148 606 3182">
@@ -2235,8 +2211,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
