--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0019.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0019.html
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
-    <meta name="ocr-id" value="abbyy" />
-    <meta name="ocr-recognized" value="lines text" />
-    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css" />
-    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8" />
+    <meta name="ocr-id" value="abbyy"/>
+    <meta name="ocr-recognized" value="lines text"/>
+    <link rel="stylesheet" type="text/css" href="http://heml.mta.ca/Rigaudon/hocr.css"/>
+    <meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8"/>
     <title>ocr</title>
   </head>
   <body>
     <div class="ocr_page" id="i0019.png">
-      <!--<div class="ocr_carea" title="bbox 60 160 1982 2780">-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 795 166 1892 200">
         <span id="w_0" class="ocr_word" title="bbox 795 166 1056 200">
           <span class="alternatives">
@@ -25,8 +23,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 78 279 1894 339">
         <span id="w_2" class="ocr_word" title="bbox 78 294 120 329">
           <span class="alternatives">
@@ -72,7 +68,7 @@
         </span>
         <span id="w_9" class="ocr_word" title="bbox 965 279 1252 335">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">vitui)evandi,</ins>
+            <ins title="nlp 2.00">vituperandi,</ins>
           </span>
         </span>
         <span id="w_10" class="ocr_word" title="bbox 1285 280 1540 321">
@@ -412,7 +408,7 @@
         </span>
         <span id="w_64" class="ocr_word" title="bbox 767 760 900 813">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">se(iiii.</ins>
+            <ins title="nlp 2.00">sequi.</ins>
           </span>
         </span>
         <span id="w_65" class="ocr_word" title="bbox 961 760 1037 801">
@@ -423,7 +419,7 @@
         </span>
         <span id="w_66" class="ocr_word" title="bbox 1070 759 1311 812">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">ubicnn([ue</ins>
+            <ins title="nlp 2.00">ubicunque</ins>
           </span>
         </span>
         <span id="w_67" class="ocr_word" title="bbox 1343 757 1514 811">
@@ -650,8 +646,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 189 1155 1895 1210">
         <span id="w_103" class="ocr_word" title="bbox 189 1161 377 1206">
           <span class="alternatives">
@@ -765,7 +759,7 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1668 1234 1962 1278">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">litteraH^H^</ins>
+            <ins title="nlp 2.00">littera H2 H2</ins>
           </span>
         </span>
       </span>
@@ -844,8 +838,8 @@
         </span>
         <span id="w_134" class="ocr_word" title="bbox 1912 1316 1965 1356">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P’</ins>
-            <del title="nlp 0.90">P’</del>
+            <ins class="alt" title="nlp 0.10">’</ins>
+            <del title="nlp 0.90">’</del>
           </span>
         </span>
       </span>
@@ -943,7 +937,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 909 1479 969 1520">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">K"</ins>
+            <ins title="nlp 2.00">K2</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1009 1477 1216 1531">
@@ -978,7 +972,7 @@
         </span>
         <span id="w_156" class="ocr_word" title="bbox 1906 1475 1965 1516">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">K"</ins>
+            <ins title="nlp 2.00">K2</ins>
           </span>
         </span>
       </span>
@@ -1192,8 +1186,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 189 1872 1896 1934">
         <span id="w_191" class="ocr_word" title="bbox 189 1881 402 1934">
           <span class="alternatives">
@@ -1259,17 +1251,7 @@
         </span>
         <span id="w_201" class="ocr_word" title="bbox 157 1960 265 2001">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">22=*1</ins>
-          </span>
-        </span>
-        <span id="w_202" class="ocr_word" title="bbox 271 1985 323 1989">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_203" class="ocr_word" title="bbox 328 1960 503 2013">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">oO’^2G),</ins>
+            <ins title="nlp 2.00">22a1–30b26),</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 542 1973 720 2012">
@@ -1409,17 +1391,7 @@
         </span>
         <span id="w_226" class="ocr_word" title="bbox 658 2120 799 2161">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">39’’’34</ins>
-          </span>
-        </span>
-        <span id="w_227" class="ocr_word" title="bbox 802 2144 854 2148">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">—</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 859 2117 977 2159">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">93*^4</ins>
+            <ins title="nlp 2.00">39a34293b4</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 999 2115 1077 2157">
@@ -1642,7 +1614,7 @@
         </span>
         <span id="w_264" class="ocr_word" title="bbox 163 2438 566 2492">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">113,17—117,13),</ins>
+            <ins title="nlp 2.00">113,17–117,13),</ins>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 615 2437 857 2479">
@@ -1726,7 +1698,7 @@
         </span>
         <span id="w_278" class="ocr_word" title="bbox 1444 2512 1611 2554">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">53—57</ins>
+            <ins title="nlp 2.00">53–57</ins>
           </span>
         </span>
         <span id="w_279" class="ocr_word" title="bbox 1645 2509 1896 2563">
@@ -1736,8 +1708,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--<p>-->
       <span class="ocr_line" title="bbox 365 2654 672 2696">
         <span id="w_280" class="ocr_word" title="bbox 365 2655 450 2696">
           <span class="alternatives">
@@ -1802,8 +1772,6 @@
           </span>
         </span>
       </span>
-      <!--</p>-->
-      <!--</div>-->
     </div>
   </body>
 </html>
